--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,10 +7,10 @@ Description: Labels are a common construct in statistical software providing a
   quick to type, and follow a language's naming conventions, labels may 
   be more illustrative and may use plain text and spaces. R does not provide
   native support for labels. Some packages, however, have made this feature
-  available.  Most notably, the Hmisc package provides labelling methods
+  available.  Most notably, the 'Hmisc' package provides labelling methods
   for a number of different object. Due to design decisions, these methods
   are not all exported, and so are unavailable for use in package development.
-  The labelVector package supports labels for atomic vectors in a light-weight
+  The 'labelVector' package supports labels for atomic vectors in a light-weight
   design that is suitable for use in other packages.
 Depends:
   R (>= 2.0.0)
